bugfix with overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,7 @@ article {
 .wave {
   background: url(/static/img/wave.svg) repeat-x;
   position: absolute;
-  bottom: 0px;
+  bottom: -10px;
   width: 6400px;
   height: 198px;
   animation: wave 15s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
@@ -127,7 +127,7 @@ article {
 }
 
 .wave:nth-of-type(2) {
-  bottom: 10px;
+  bottom: 0px;
   animation: wave 15s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 15s ease -1.25s infinite;
   opacity: 0.7;
 }
